fix navbar z-index glitch

--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,7 @@ a {
 .header.open {
   height: 100vh;
   background-color: var(--background-overlay);
+  z-index: 99999;
 }
 
 .header nav ul {
@@ -91,6 +92,8 @@ a {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  position: relative;
+  z-index: 99999;
 }
 
 .header nav ul li {
@@ -349,8 +352,8 @@ svg {
   }
 
   .art-image {
-    margin-top: 5px;
-    max-width: 55%;
+    margin-top: 20px;
+    max-width: 70%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -396,7 +399,7 @@ svg {
 
   .art-image {
     margin-top: 35px;
-    max-width: 35%;
+    max-width: 60%;
     display: block;
     margin-left: auto;
     margin-right: auto;
